# pomodoro

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  config.toml  meson.build
include/: pomodoro.h  progressbar.h  timer.h  version.h.in
make/: tomlc99.mk
meson-subprojects/: utility
src/: CMakeLists.txt  main.c  meson.build  pomodoro.c  progressbar.c  timer.c
subprojects/: meson.build  tomlc99
